--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "datocms-structured-text-generic-html-renderer": "^1.3.0",
     "datocms-structured-text-utils": "^1.1.0",
     "hyphenate-style-name": "^1.0.4",
-    "vue-demi": "^0.7.5"
+    "vue-demi": "^0.12.5"
   },
   "peerDependencies": {
-    "@vue/composition-api": "^1.0.0-rc.1",
-    "vue": "^2.0.0 || >=3.0.0-rc.1"
+    "@vue/composition-api": "^1.6.1",
+    "vue": "^2.6.14"
   },
   "peerDependenciesMeta": {
     "@vue/composition-api": {
